fixed videos, slides, and members to reflect new info created for GTEC contest

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@ permalink: /
         <div class="row centered">
             <div class="col-md-4">
                 <i class="fa fa-codepen"></i>
-                <h4>Decentralized</h4>
-                <p>No third party custody of bitcoin or fiat Currency.</p>
+                <h4>Secure</h4>
+                <p>Bitcoin held in multi signature accounts, digital arbitrators guarantee delivery of fiat currency.</p>
                 <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-lock"></i>
-                <h4>Secure</h4>
-                <p>Digital notary guarantees delivery of fiat currency.</p>
+                <h4>Private</h4>
+                <p>Negotiated trades are settled peer to peer, no personal data collected by a central server.</p>
                 <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
             </div>
             <div class="col-md-4">
                 <i class="fa fa-users"></i>
-                <h4>Peer to Peer</h4>
-                <p>Trade freely and privately, no permission required.</p>
+                <h4>Convenient</h4>
+                <p>Easy to use software and decentralized network of traders and arbitrators quickly settle trades.</p>
                 <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
             </div>		 				
         </div>
