Freshen the site and make changes to emphasize the mobile app.  Removed links for blog, faq, docs and bitbucket.  Added to contact page form to register for beta t esting or updates.

--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,10 @@ permalink: /contact/
 
 <div class="container mtb">
     <div class="row">
-        <!-- <div class="col-lg-8">
+        <div class="col-lg-8">
             <h4>Just Get In Touch!</h4>
             <div class="hline"></div>
-                <p>{{ site.about }}</p>
+                <p>{{ site.testimonial }}</p>
                 <form role="form">
                   <div class="form-group">
                     <label for="InputName1">Your Name</label>
