--- a/index.html
+++ b/index.html
@@ -9,33 +9,35 @@ permalink: /
         <div class="row centered">
             <div class="col-md-4">
                 <i class="fa fa-codepen"></i>
-                <h4>Secure</h4>
-                <p>Bitcoin held in multi signature accounts, digital arbitrators guarantee delivery of fiat currency.</p>
-                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
+                <h4>Safe</h4>
+                <p>Bitcoin secured by multi-signature escrow with optional arbitration by Bytabit.</p>
+<!--                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/bytabit-mobile" class="btn btn-theme">More Info</a></p> -->
             </div>
             <div class="col-md-4">
                 <i class="fa fa-lock"></i>
                 <h4>Private</h4>
-                <p>Negotiated trades are settled peer to peer, no personal data collected by a central server.</p>
-                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
+                <p>Identity information is only revealed to your trade partners.</p>
+<!--                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/bytabit-mobile" class="btn btn-theme">More Info</a></p> -->
             </div>
             <div class="col-md-4">
                 <i class="fa fa-users"></i>
-                <h4>Convenient</h4>
-                <p>Easy to use software and decentralized network of traders and arbitrators quickly settle trades.</p>
-                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/fiat-trader" class="btn btn-theme">More Info</a></p>
+                <h4>Easy to Use</h4>	
+                <p>Simple to use mobile app for Android and iOS.</p>
+<!--                <p><br/><a target="_blank" href="https://bitbucket.org/bytabit/bytabit-mobile" class="btn btn-theme">More Info</a></p> -->
             </div>		 				
         </div>
     </div><! --/container -->
 </div><! --/service -->
 
+
+<!-- 
 <div class="container mtb">
     <div class="row">
-        <!-- <div class="col-lg-4 col-lg-offset-1">
+        <div class="col-lg-4 col-lg-offset-1">
             <h4>More About The Project.</h4>
             <p>{{ site.about }}</p>
             <p><br/><a href="{{ "/about/" | prepend: site.baseurl }}" class="btn btn-theme">More Info</a></p>
-        </div>  -->
+        </div>
 
         <div class="col-lg-3 col-lg-offset-1">
             <h4>Latest Documents</h4>
