--- a/contact.html
+++ b/contact.html
@@ -9,28 +9,28 @@ permalink: /contact/
 <div class="container mtb">
     <div class="row">
         <div class="col-lg-8">
-            <h4>Just Get In Touch!</h4>
+            <h4>Get In Touch</h4>
             <div class="hline"></div>
-                <p>{{ site.testimonial }}</p>
-                <form role="form">
-                  <div class="form-group">
-                    <label for="InputName1">Your Name</label>
-                    <input type="text" class="form-control" id="exampleInputName1">
-                  </div>
-                  <div class="form-group">
-                    <label for="InputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1">
-                  </div>
-                  <div class="form-group">
-                    <label for="InputSubject1">Subject</label>
-                    <input type="text" class="form-control" id="exampleInputSubject1">
-                  </div>
-                  <div class="form-group">
-                    <label for="message1">Message</label>
-                    <textarea class="form-control" id="message1" rows="3"></textarea>
-                  </div>
-                  <button type="submit" class="btn btn-theme">Submit</button>
-                </form>
+                <p>{{ site.testimonial }}<a href="mailto:{{ site.email }}"> {{ site.email }}</a></p>
+                <!--<form role="form">-->
+                  <!--<div class="form-group">-->
+                    <!--<label for="InputName1">Your Name</label>-->
+                    <!--<input type="text" class="form-control" id="exampleInputName1">-->
+                  <!--</div>-->
+                  <!--<div class="form-group">-->
+                    <!--<label for="InputEmail1">Email address</label>-->
+                    <!--<input type="email" class="form-control" id="exampleInputEmail1">-->
+                  <!--</div>-->
+                  <!--<div class="form-group">-->
+                    <!--<label for="InputSubject1">Subject</label>-->
+                    <!--<input type="text" class="form-control" id="exampleInputSubject1">-->
+                  <!--</div>-->
+                  <!--<div class="form-group">-->
+                    <!--<label for="message1">Message</label>-->
+                    <!--<textarea class="form-control" id="message1" rows="3"></textarea>-->
+                  <!--</div>-->
+                  <!--<button type="submit" class="btn btn-theme">Submit</button>-->
+                <!--</form>-->
         </div><! --/col-lg-8 -->
 
         <div class="col-lg-4">
