fixed typo SAFE should be lower case Safe

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="row centered">
             <div class="col-md-4">
                 <i class="fa fa-codepen"></i>
-		<h4>SAFE</h4>
+		<h4>Safe</h4>
 		<p>Bitcoin secured by multi-signature escrow with optional arbitration by Bytabit.</p>
             </div>
             <div class="col-md-4">
